--- a/config/app.yml
+++ b/config/app.yml
@@ -4,18 +4,18 @@ app:
   domain: app.local
   subdomain: www
   show_landing: true
-  opendax_addr: https://www.opendax.cloud
-  wizard_enabled: false
+  opendax_addr: https://www.opendax.cloud  # Use uat.opendax.cloud to connect to XLN testnet
+  wizard_enabled: true
 render_protect: false
-csrfEnabled: false
+csrfEnabled: true
 ssl:
   enabled: false
   email: support@example.com
 updateVersions: false
 images:
-  peatio: quay.io/openware/peatio:3.0.2
+  peatio: quay.io/openware/peatio:3.0.13
   barong: quay.io/openware/barong:3.0.5
-  sonic: quay.io/openware/baseapp:3.0.7
+  sonic: quay.io/openware/baseapp:da52a555
   tower: quay.io/openware/tower:3.0.20
   rango: quay.io/openware/rango:3.0.1
   finex: quay.io/openware/openfinex:3.0.0-74d3b52
@@ -95,7 +95,7 @@ wallets:
     address: changeme
     max_balance: 1000.0
 parity:
-  network: kovan  # Could be mainnet, kovan, rinkeby
+  network: kovan
   address: parity
   rpcport: 8545
   port: 30303
@@ -117,13 +117,13 @@ litecoind:
 electrumd_btc:
   user: opendax
   password: changeme
-  wallet_passphrase: "luc1d1tyc0m3b@ck"
+  wallet_passphrase: luc1d1tyc0m3b@ck
   testnet: true
   segwit: false
 electrumd_ltc:
   user: opendax
   password: changeme
-  wallet_passphrase: "th3l3ss1kn0wth3b3tt3r"
+  wallet_passphrase: th3l3ss1kn0wth3b3tt3r
   testnet: true
   segwit: false
 terraform:
